--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>Mothersdaycard</h1>
-          <h2>CreativeLive Digital eCard Prototype</h2>
+          <h2>CreativeLive Digital eCard Prototype -- edit!</h2>
         </header>
 
         <section id="downloads" class="clearfix">
