--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <body>
         <button onclick="sendTheMail(); return false;">Send the Mail</button>
         <pre id="response"></pre>
+        <p>Trying a Form Below:</p>
+        <form>message: <input type="text" name="message">
+        <input type=submit" value="Submit" onclick="sendTheMail(); return false;"</form>
     </body>
 </html>
