--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <pre id="response"></pre>
         <p>Trying a Form Below:</p>
         <form>message: <input type="text" name="message">
-        <input type="submit" value="Submit" onclick="sendTheMail(); return false;"</form>
+        <input type="submit" value="Submit" onclick="sendTheMail(); return false;"></form>
     </body>
 </html>
